perf(query): edge_index_scan 按类型直写列，去掉每行一次的 vector<Value> (#237)
* perf(query): edge_index_scan 按类型直写列，去掉每行一次的 vector<Value>

起因是"给批填充的 vector 预分配"。实测后结论相反：reserve 在扫描批上量不出收益，
而同一个文件族里漏掉的一处逐行堆分配值 85%。

一、edge_index_scan 每行 vector<Value> + appendRow（真正的收益点）
   原形状每行构造 std::vector<Value>：vector 自身一次堆分配 + 1..3 次扩容，而
   appendRow 只有 const& 重载，std::move 进去仍是逐元素拷贝（Value 48 字节、非平凡）。
   实测该算子形状（3 列，200k 行，-O2，仓库真实类型）：
     每行 vector<Value> + appendRow : 50.3 ns/行, 3.00 分配/行
     按类型直写列                   :  7.7 ns/行, 0.00 分配/行
   它是 all_node_scan / label_scan / index_scan / index_scan_values 的兄弟算子，
   那几个上个 commit 已改成直写，只有它漏了。

   新增 DataChunk::appendRowTyped(const VertexRef*, const VertexRef*, const EdgeKey*)：
   appendVertexRefRow 的多列版本，nullptr 表示该列不写（扫描只绑查询点到的变量）。
   列与值的类型分派落在 Column::setTypedOrValue<V>()，复用 setTypedImpl 的
   kind/DICTIONARY/CONSTANT 保护，拒绝时回退 setValue —— 行为与 appendRow 一致。
   用指针而非 optional 是为了 7 种列组合只需一个重载。

二、批填充 vector 预分配（async_graph_data_store，8 处）
   scanVerticesByLabel / scanAllVertices / scanEdgeIndexEntries / scanEdgesByType，
   以及 4 个 edge index 扫描：这些循环"填到 BATCH 或游标耗尽"，上限已知，加
   reserve(BATCH) 让每批一次分配取代 log2 次增长。

   如实记录：**这一项在扫描路径上量不出端到端收益**。批内循环自身省 0.06 ns/行
   （1.066→0.49 是 loop-only 的比例），但把游标遍历加进分母后差异落在噪声里，且 -O2 下
   两种写法循环体的 call 数几乎相同（6 vs 7）—— vector 增长是均摊的，不构成逐行成本。
   保留它的理由是每批少 10 次分配器调用（分配计数 1.07e-2 → 1.0e-3 次/行），属可读性
   与分配器churn 的改善，不是延迟改善。

   未动的两处：6 个 scanVerticesByIndex* 里的 std::vector<VertexId> all（大小是索引
   命中的不确定集合，reserve 到最坏情况会白占内存）；scanEdgesBatch 已有的
   reserve(1024)（其 BATCH=65536，容量与上限不匹配是既有的小瑕疵，本轮不改语义）。

三、文档
   query-engine-design.md 的"按类型直写"补多列行追加与判据。测试新增 3 例：
   与 appendRow 逐列等价（覆盖 7 种列组合）、4096 行零分配、以及一个对照用例证明分配
   计数器真能观察到分配（避免"计数器没生效所以恒 0"的假绿）。

验证：
* data_chunk_tests 16/16、index_e2e_tests 50/50、index_store_tests 14/14、
  query_executor_tests 573/573（整目标全量）、自有 TCK 31/31；
* 全量构建通过、check-format.sh 通过、git diff --check clean；
* 目标文件反汇编确认调用点已从 appendRow 换成 appendRowTyped/setTypedOrValue；
* 未跑全量 ctest（含上游 TCK，约 15 分钟），按前几轮