@@ -1,443 +1,497 @@
 # LDBC SNB Interactive SF0.1 复测（当前版本）
 
-> **2026-09-21 修订**：新增 [§6 当前版本延迟](#6-当前版本延迟2026-09-21重型值类型句柄化之后) ——
-> 重型值类型句柄化之后的 p50/p95、与 main 的交错 A/B、以及分配占比（80% → 11%）。
-> **§2 的 2026-09-10 表保留为历史基线，其数据目录与参数口径与 §6 不同，两者不可直接相减**；
-> §6.1 列出了具体差异。
+> **2026-09-25 增补**：§1.0 记录"CSV 三种状态与类型从哪来"（官方原版 / ldbc-conv /
+> headers.txt 类型化版，以及 neo4j 与我们的 loader 各自如何定类型）；§8 汇总本轮发现的问题
+> （引擎缺陷 A / 加载与工具链 B / loader 专项 B2 / 并发 C / 测量陷阱 D，含我自己的失误）。
 >
-> **2026-09-19 修订**：complex-10 结论已更正、延迟已重测；complex-5/6/9 的可执行性
-> 与根因已补入。未标记小节测得于 2026-09-10，其数值受当时 `CPU(s) scaling MHz` 影响，
-> **不宜与新值直接相减**。值拷贝优化的完整剖析见
-> [查询值拷贝性能剖析](query-value-copy-profiling.md)。
+> **2026-09-25 重写**：整篇以**本次同机交错 A/B 实测**为唯一当前口径。
+> 此前各轮（2026-09-10 / 09-19 / 09-21）的耗时表口径互不相同（数据目录、参数连接方式、
+> CPU 频率都变过），留在一起只会让人误做减法，已删除；仍然有效的**根因分析与能力缺口**
+> 收在第 5、6 节。各轮的完整过程记录可回溯 git。
+>
+> 方法要点：**每个查询新建连接**（服务端会断开长连接，见
+> [known-defects-todo](../query/known-defects-todo.md) §7）、**两引擎交错执行**（本机 CPU 频率
+> 会漂移，先跑完一个再跑另一个会把频率变化误读成加速）、报 min 与 p50。
 
-> 分支：`feat/pattern-expression-in-return`（main `c63e3bd` + 本轮 RETURN/ORDER BY pattern expression 支持）
-> 数据目录：`eugraph/build/ldbc-bench/eugraph`（converted Neo4j-header CSV，`Comment:Message` / `Post:Message`）
-> 节点 327,588；边 1,477,965
-> 查询集：`ldbc_snb_interactive_v1_impls/cypher/queries/` 的 **LDBC 原版查询文本**
-> 方法：Bolt 7688，每个查询 1 次预热 + 3 次计时取中位数；单次超时 45s
-> 日期：2026-09-10
+## 1. 环境与口径
 
-## 1. 测试环境
+| 项 | eugraph | neo4j |
+|---|---|---|
+| 版本 | 本分支 Release（`build/release/eugraph-server`） | 5.26.30 community |
+| 端点 | bolt `127.0.0.1:7688`（thrift 9090） | bolt `127.0.0.1:7687` |
+| 数据 | `eugraph-sf0.1-fresh`：**330,126 点 / 1,478,002 边** | 同一份 sf0.1 导入：**330,130 点 / 1,478,003 边** |
+| WiredTiger | `cache_size=256MB, eviction=(threads_max=4), transaction_sync=(enabled=true,method=fsync)` | — |
+| 查询文本 | `ldbc_snb_interactive_v1_impls/cypher/queries/` **原版** | 同左（仅下述类型归一化） |
+| 参数 | 文件自带 `:param` 默认值，仅 `personId`→933、`messageId`→3 | 同左，且 id 类参数按字符串传（neo4j 的 `id` 是 STRING） |
+| 口径 | warmup 3 + 15 轮计时，两引擎交错；报 min / p50 | 同左 |
 
-| 项 | 配置 |
+### 1.0 CSV 的三种状态与"类型从哪来"（反复踩的点，先看这个）
+
+LDBC 的 CSV 到能用之间隔着一步**表头类型化**，官方原版、部分转换版、类型化版三者不同：
+
+| 状态 | 路径 / 来源 | 表头长什么样 | 有类型吗 |
+|---|---|---|---|
+| ① **官方原版** | LDBC SURF 下载包 `social_network-sf0.1-CsvBasic-LongDateFormatter` | `id\|type\|name\|url`；关系表 `Person.id\|Organisation.id\|workFrom` | **完全没有** |
+| ② **部分转换版** | `/home/dodo/code/fuck/ldbc-conv`（本仓一直用它加载） | `id:ID(Organisation)\|type\|name\|url`；`:START_ID(Person)\|:END_ID(Organisation)\|workFrom` | **只有 id 列注解，属性列无类型**；无 `:LABEL`；`type` 值仍是小写 `city`/`company` |
+| ③ **类型化版** | `cypher/scripts/headers.txt` 覆盖后的产物（本仓由 `scripts/prepare_ldbc_official_csv.py` 生成） | `id:ID(Organisation)\|:LABEL\|name:STRING\|url:STRING`；`:START_ID(Person)\|:END_ID(Organisation)\|workFrom:INT` | **全齐**：`birthday:LONG` `creationDate:LONG` `length:INT` `workFrom:INT` `classYear:INT` `speaks:STRING[]` `email:STRING[]`… |
+
+类型定义**全部**在 `cypher/scripts/headers.txt`（31 行，格式 `文件 表头`）。官方流程是：
+
+```
+① 原版 CSV（无类型）
+   │  cypher/scripts/convert-csvs.sh：
+   │    ① 用 headers.txt 的类型化表头覆盖每个文件的表头
+   │    ② sed 把标签列的值改成标签拼写（|city$|→|City|、|company|→|Company|…）
+   ▼
+③ 类型化 CSV
+   │  neo4j-admin import / 我们的 loader
+   ▼
+入库：类型为 LONG/INT，标签为 Company/University/City/Country/Continent
+```
+
+**关键点**：`neo4j-admin import` **不读 `headers.txt`**——它读的是被覆盖后的 CSV 表头。
+`headers.txt` 是**加载前的数据准备输入**。`convert-csvs.sh:25-37` 就是那段覆盖逻辑
+（`echo ${HEADER} | cat - <(tail -n +2 file)`），第 40-44 行是标签值的 sed。
+
+**neo4j 如何定类型**（源码：`community/import-util/.../csv/DataFactories.java`）：
+列头按 `name:type` 解析 → `extractors.valueOf(typeSpec)` 在 `Extractors` 注册表里查名字
+（查不到直接抛 `'xxx' is not a valid type.`）。可用类型名：`String` `Long` `Int` `Char`
+`Short` `Byte` `Boolean` `Double` `Float` 及各自 `*Array`，加 `Point`/`Date`/`Time`/
+`DateTime`/`LocalTime`/`LocalDateTime`/`Duration`（及数组）。
+**没有冒号的列 = 属性，类型默认 `String`**；`:ID(...)`/`:START_ID(...)`/`:END_ID(...)`
+的解析由命令行 `--id-type=INTEGER|STRING|ACTUAL` 决定；`:LABEL`/`:TYPE`/`:IGNORE`/`:ACTION`
+是结构性类型、不产生属性值。
+
+**与我们 loader 的差异**（能力等价，差别在"表头没写类型时"）：
+
+| 维度 | neo4j-admin import | 我们的 loader |
+|---|---|---|
+| 类型来源 | `name:type`，**无则 String** | `name:type`（`:INT`/`:LONG`/`:STRING`…），**无则按值推断** |
+| id 列 | `:ID(Group)` + `--id-type` | `id:ID(Group)`，固定 INT64 |
+| 标签 | `:LABEL` 列 / `--nodes=Label:Label` | `:LABEL` 列（`HeaderKind::LABEL`）/ `--nodes=Label:Label`（`:` 分隔） |
+| 关系类型 | `--relationships=TYPE=file` | 同左（**必须显式给**，否则用文件名推导出的类型名，见 §8 B2） |
+| 类型不符 | 报错退出 | 按推断处理 |
+
+**为什么这件事反复咬人**：直接导 ②（ldbc-conv）会同时丢两样东西——
+`Company`/`University`/`City`/`Country`/`Continent` 标签（没有 `:LABEL` 列）与属性类型
+（`workFrom` 等无声明）。前者让 complex-11 返回 0 行，后者让两引擎在日期/数值谓词上分叉
+（neo4j 旧实例里 `WORK_AT.workFrom` 是 `'2013'`、`LIKES.creationDate` 是字符串，见 §1.1）。
+**必须用 ③ 加载**（`prepare_ldbc_official_csv.py`），否则两边永远对不齐。
+
+> 想看 ③ 长什么样：`/tmp/vbench/conv4/`（本仓生成，注意 /tmp 会丢，可自行重新生成）；
+> 想看官方原生实现：设好 `NEO4J_VANILLA_CSV_DIR` / `NEO4J_CONVERTED_CSV_DIR` 后跑
+> `cypher/scripts/convert-csvs.sh`（本机这两个变量未设，故官方产物不存在）。
+
+### 1.1 测量前对 neo4j 补齐的数据差异（否则它的读数无意义）
+
+neo4j 实例来自**旧转换**，与 eugraph 有 5 处差异。不补齐时 complex-5/6/9/11 会返回 0 行或直接报错，
+**耗时数字只是"没干活"**：
+
+| # | 差异 | neo4j 原状 | 补齐方式 | 影响 |
+|---|---|---|---|---|
+| 1 | 派生标签 `Message` | 不存在 | `MATCH (n:Post) SET n:Message`（Comment 同理）→ 286,744，与 eugraph 一致 | 不补则 complex-6/9 匹配 0 行 |
+| 2 | 派生标签 `Company` / `University` | 不存在 | 按 `organisation_0_0.csv` 的 `type` 列打标 → 1575 / 6380，与 eugraph 一致 | 不补则 complex-11 为 0 行 |
+| 3 | `LIKES.creationDate` 为 STRING | `'1342815871582'` | 查询内 `toInteger(like.creationDate) AS likeTime` | 不补则 complex-7 抛 `TypeError` |
+| 4 | `WORK_AT.workFrom` 为 STRING | `'2013'` | 查询内 `toInteger(workAt.workFrom)` | 不补则 complex-11 的 `< $workFromYear` **静默不匹配**（0 行、不报错） |
+| 5 | 同 3/4 类型的历史项 | `Message.creationDate` / `HAS_MEMBER.joinDate` / `Person.birthday` | 已提前转为 INTEGER（eugraph 侧本就是 INT64） | 影响 complex-3/9/10 的日期谓词 |
+
+**这些改写只作用在 neo4j 侧**；eugraph 侧跑的是原版文本。`scripts/bench_ldbc_ab.py --neo4j-fix-types`
+即第 3、4 项的开关，第 1、2、5 项是对数据集的一次性补齐（见第 7 节）。
+
+## 2. 同机交错 A/B（2026-09-25）
+
+单位 ms；`ratio = neo4j_min / eugraph_min`，**> 1 表示 eugraph 更快**。
+`vs neo4j` 列给出 eugraph 相对 neo4j 的倍率（`neo_min / eg_min`），颜色语义沿用本文件历史口径：
+
+> 🟢 = 性能相当或更快（eugraph 慢 ≤ 1.5×）｜🟡 = 慢 1.5–5×｜🔴 = 慢 5× 以上
+
+| 查询 | 行数 eg/neo | eg min | eg p50 | neo min | neo p50 | ratio | vs neo4j |
+|---|---:|---:|---:|---:|---:|---:|:---:|
+| short-5 | 1 / 1 | 1.53 | 1.69 | 141.89 | 152.51 | **92.8×** | 🟢 **快 93×** |
+| short-4 | 1 / 1 | 1.35 | 1.62 | 71.00 | 72.96 | **52.5×** | 🟢 **快 53×** |
+| short-7 | 0 / 0 | 2.34 | 2.54 | 111.73 | 113.31 | **47.7×** | 🟢 **快 48×** |
+| short-6 | 1 / 1 | 2.01 | 2.17 | 68.54 | 71.12 | **34.1×** | 🟢 **快 34×** |
+| short-1 | 1 / 1 | 1.11 | 1.31 | 1.32 | 1.50 | 1.19× | 🟢 快 1.2× |
+| short-3 | 3 / 3 | 1.47 | 1.63 | 1.60 | 1.76 | 1.09× | 🟢 快 1.1× |
+| short-2 | 10 / 10 | 4.49 | 5.24 | 2.30 | 2.61 | 0.51× | 🟢 慢 1.95× |
+| complex-8 | 20 / 20 | 6.51 | 7.05 | 2.72 | 2.90 | 0.42× | 🟡 慢 2.4× |
+| complex-7 | 7 / 7 | 6.92 | 7.51 | 2.64 | 2.90 | 0.38× | 🟡 慢 2.6× |
+| complex-11 | 4 / 4 | 9.95 | 10.57 | 3.14 | 3.56 | 0.32× | 🟡 慢 3.2× |
+| complex-4 | 0 / 0 | 13.45 | 14.15 | 3.22 | 3.56 | 0.24× | 🟡 慢 4.2× |
+| complex-2 | 20 / 20 | 22.05 | 23.06 | 3.78 | 4.06 | 0.17× | 🔴 慢 5.8× |
+| complex-10 | 10 / 10 | 67.21 | 71.71 | 7.56 | 8.54 | 0.11× | 🔴 慢 8.9× |
+| **complex-12** | 3 / 3 | **459.26** | 476.47 | 91.80 | 100.65 | **0.20×** | 🔴 **慢 5.0×** |
+| **complex-3** | 0 / 0 | **527.80** | 538.55 | 24.70 | 26.02 | **0.05×** | 🔴 **慢 21.4×** |
+
+统计：🟢 7 条（其中 4 条快 34–93×）、🟡 4 条、🔴 4 条。
+
+**行数两引擎全部一致**——这是本表能作为对照的前提。此前几轮出现过的 0 行 / 行数不符，
+全部由 §1.1 的数据差异与参数口径造成，与查询语义无关。
+
+### 2.1 读法
+
+* **按 id 的索引点查/一跳查询，eugraph 明显更快**：`short-4/5/6/7` 快 **34–93×**
+  （neo4j 这三条要 68–142 ms，eugraph 1.3–2.3 ms），`short-1/3` 也略快。
+* **最大差距是 complex-3（21×）与 complex-12（4.6×）**，且都在数百 ms 量级：
+  - complex-3：`Tag(name) → Post → HAS_CREATOR → Country` 的两国计数，553 ms vs 25 ms；
+  - complex-12：`TagClass(name) → Tag → Post → HAS_CREATOR → Person` 的回复计数，459 ms vs 92 ms。
+  两者都是"**从一个具名起点沿关系多次跳转 + 中间结果放大**"的形状，落在展开顺序与中间结果规模上，
+  与值拷贝无关（那一层的收益已在早前轮次落地）。
+* complex-10 本轮 **67 ms**（neo4j 8.5 ms，8.8×）。早前轮次记录过 7.1×，两者同档；
+  机器频率与环境不同，**不宜跨会话相减**。
+
+### 2.2 用官方加载口径重导数据（消除 §1.1 那些差异的根因）
+
+§1.1 里对 neo4j 补的 5 处差异，根因**不是数据，而是加载时用错了 CSV 表头语义**。官方
+Neo4j 参考实现并不直接 `neo4j-admin import` 原始 CSV，而是先跑
+`cypher/scripts/convert-csvs.sh`：
+
+1. 用 `cypher/scripts/headers.txt` 里的**类型化表头覆盖**每个文件的原始表头。
+   该文件每行是 `文件 表头`，冒号后就是类型：`id:ID(Organisation)`（主键与其 id 空间）、
+   `:START_ID` / `:END_ID`（关系两端）、**:`LABEL`（这一列的值是标签名）**、
+   `name:STRING` / `creationDate:LONG` / `workFrom:INT`（属性类型）。
+2. 再用 sed 把标签列的值改成标签拼写：`|company|` → `|Company|`、`|city$|` → `|City|` 等。
+
+**`headers.txt` 是官方 pipeline 的数据准备输入，不是 `neo4j-admin import` 的运行时输入**——
+但缺了它就会丢 schema：原始 CSV 里 `type` 只是一列普通属性，于是 `Company` / `University` /
+`City` / `Country` / `Continent` 这些标签根本不存在（complex-11 因此匹配 0 行），
+`workFrom` / `creationDate` 的类型也没有保证。
+
+我们的 loader **支持与 `neo4j-admin import` 同形的映射**（`--nodes=Label[:Label...]=file`、
+`--relationships=TYPE=file`，并识别 `:LABEL` 列），所以可以完全按官方口径加载：
+
+```bash
+# 等价于官方 convert-csvs.sh + import-to-neo4j.sh（headers.txt 作为唯一事实来源）
+python3 scripts/prepare_ldbc_official_csv.py \
+    --src /home/dodo/code/fuck/ldbc-conv --out /tmp/ldbc-official \
+    --load --host 127.0.0.1 --port 9090
+```
+
+**实测结果**（sf0.1，全新实例）：Message 286,744 / Post 135,701 / Comment 151,043 /
+Person 1,528 / Organisation 7,955 / **Company 1,575** / **University 6,380** /
+**City 1,343 / Country 111 / Continent 6** / Tag 16,080 / TagClass 71 / Forum 13,750，
+且 15 类关系计数与原始 CSV 直导**逐项相同**——即官方口径下**不再需要任何手工补丁**。
+
+> 两个 Vertex 文件的第二个标签（`Comment:Message`、`Post:Message`）来自
+> `import-to-neo4j.sh` 而非 `headers.txt`，脚本里以 `EXTRA_NODE_LABELS` 显式记录。
+
+### 2.3 官方 driver 端到端跑通（2026-09-25，进行中）
+
+比自写 A/B 脚本更权威的做法：**用 LDBC 官方 driver + 官方 substitution parameters** 跑。
+本轮已把这条链路打通，要素如下（复现命令见 §7.1）：
+
+| 环节 | 结论 |
 |---|---|
-| server | `eugraph-server --bolt-port 7688 --thrift-port 9090` |
-| WiredTiger | cache 2048MB，`--wt-txn-sync none`，threads 4 |
-| 索引 | loader 自带各标签 `id` 唯一索引 + `Tag(name)` / `TagClass(name)` / `Person(firstName)` / `Message(creationDate)` 等 |
-
-## 2. 已执行查询结果（同机对比）
-
-> 时间均为 1 次预热 + 3 次计时取中位数，单位 ms。
-> 图标：🟢 = EuGraph 与 Neo4j 性能相当或更快（倍数 ≤ 1.5）；🟡 = 慢 1.5~5 倍；🔴 = 慢 5 倍以上。
-> 倍数 = EuGraph / Neo4j，<1 表示 EuGraph 更快。
-
-| Query | 行数 | EuGraph(ms) | Neo4j(ms) | 倍数 | 图标 |
-|-------|-----:|------------:|----------:|-----:|:---:|
-| complex-12 | 2 | 13.09 | 83.79 | 0.16 | 🟢 |
-| short-6 Comment | 1 | 1.21 | 4.85 | 0.25 | 🟢 |
-| short-3 | 3 | 1.04 | 3.92 | 0.27 | 🟢 |
-| short-5 Post | 1 | 0.78 | 2.42 | 0.32 | 🟢 |
-| short-4 Post | 1 | 0.90 | 2.49 | 0.36 | 🟢 |
-| short-1 | 1 | 1.06 | 2.82 | 0.38 | 🟢 |
-| short-4 Comment | 1 | 0.98 | 2.49 | 0.39 | 🟢 |
-| short-5 Comment | 1 | 0.92 | 2.23 | 0.41 | 🟢 |
-| short-6 Post | 1 | 1.28 | 2.54 | 0.50 | 🟢 |
-| short-7 无回复 | 0 | 1.40 | 2.70 | 0.52 | 🟢 |
-| short-7 有回复 | 19 | 7.02 | 9.27 | 0.76 | 🟢 |
-| short-2 | 10 | 5.78 | 5.25 | 1.10 | 🟢 |
-| complex-8 | 20 | 5.92 | 5.28 | 1.12 | 🟢 |
-| complex-2 | 20 | 25.51 | 17.98 | 1.42 | 🟢 |
-| complex-4 | 10 | 18.23 | 8.92 | 2.04 | 🟡 |
-| complex-11 | 10 | 13.28 | 5.85 | 2.27 | 🟡 |
-| complex-3 | 0 | 101.20 | 48.76 | 2.08 | 🟡 |
-
-说明：
-- complex-3 本轮从 2024.30ms 降至约 101ms（同参数、同机）；该参数返回 0 行，但查询正常执行完成。
-- complex-3 结果正确性用返回 1 行的 `Sweden/Kazakhstan` 参数与 Neo4j、原计划交叉核对一致。
-- `Message(creationDate)` 索引必须是完整索引；本机旧索引只有 1024 条，重建后为 286,744 条（见 5.6）。
-- short-7 使用“无回复”的 Comment，避免已知的 OPTIONAL MATCH 超时路径。
-- 参数口径见下表。
-
-### 2.1 参数
-
-| Query | 参数 |
-|-------|------|
-| complex-2 | personId=933, maxDate=1287187200000 |
-| complex-3 | personId=933, countryXName=Germany, countryYName=Brazil, startDate=1275350400000, endDate=1277769600000 |
-| complex-4 | personId=933, startDate=1262808638903, endDate=1347527502711 |
-| complex-8 | personId=933 |
-| complex-11 | personId=933, countryName=India, workFromYear=2011 |
-| complex-12 | personId=933, tagClassName=Actor |
-| short-1/2/3 | personId=933 |
-| short-4/5/6 Post | messageId=3 |
-| short-4/5/6 Comment | messageId=618475290625 |
-| short-7 | messageId=618475290625（无回复） |
-
-## 3. 能力缺口与重查询状态
-
-| Query | 状态（2026-09-19） |
-|-------|------|
-| complex-1 / complex-13 | 语法不支持：依赖 `shortestPath` |
-| complex-14 | 语法不支持：`allShortestPaths` + `reduce` |
-| **complex-6** | ✅ **可执行**（personId=933：0.49 s / 3 行） |
-| **complex-9** | ✅ **可执行**（personId=933：3.96 s / 20 行，峰值 3.1 GB） |
-| **complex-5** | ⚠️ 不再耗尽内存，但 200 s 内不返回（内存平稳 ~4 GB）—— 属**性能/计划**问题 |
-
-**complex-5/6/9 原先「CPU/内存失控、跳过」的根因已定位并修复**：
-三者共用 `WITH collect(DISTINCT friend) AS friends UNWIND friends AS f ...`，
-而 `friends` 在 UNWIND 之后**已死**却被继续携带；`ProjectionExtract` 把上游的
-CONSTANT 广播列重新逐行物化成 FLAT，于是「1 份值」变成 `行数` 份 174 元素列表的深拷贝。
-
-| 写法（同语义、同数据） | 修复前 | 修复后 |
-|---|---:|---:|
-| 普通 MATCH 等价写法 | 671 MB / 0.71 s | — |
-| `collect+UNWIND`（LDBC 原写法） | **OOM（>6 GB）/ 6.31 s** | **599 MB / 0.32 s** |
-| `collect+UNWIND` 后加 `WITH f` 丢弃该列 | 653 MB / 0.73 s | 598 MB / 0.55 s |
-
-修复：`ProjectionExtractPhysicalOp` 对 CONSTANT 源列的透传**保持 CONSTANT**
-（该算子输入输出行 1:1，故广播形式仍成立）。详见该修复的提交说明。
-
-### complex-5/6/9 与 neo4j 对比（2026-09-19，personId=933）
-
-**测量前对 neo4j 实例补了三处数据差异**（与此前补 `City`/`Country`/`Continent`、`birthday`
-的做法一致）—— 否则 neo4j 侧的耗时无意义：
-
-| 差异 | neo4j 原状 | 补齐 |
-|---|---|---|
-| 派生标签 `Message` | **不存在**（警告 `label does not exist`），complex-9 返回 0 行 | `MATCH (n:Post) SET n:Message` + `Comment` 同理 → **286,744**，与 eugraph 一致 |
-| `Message.creationDate` | **字符串** | `toInteger()` → complex-9 的 `WHERE creationDate < $maxDate` 才能生效 |
-| `HAS_MEMBER.joinDate` | **字符串** | `toInteger()` → complex-5 的 `WHERE joinDate > $minDate` 才能生效 |
-
-> 后两处与文档早先记录的 `birthday` 是同一类问题：旧转换把 LONG 表头当字符串处理。
-> **补之前**：complex-9 与 complex-5 在 neo4j 上均返回 **0 行**（耗时 13–28 ms，无参考价值）。
-
-| 查询 | eugraph | neo4j | 倍数 | 行数（eugraph / neo4j）|
-|---|---:|---:|---:|:---:|
-| **complex-6** | 0.49 s | **30.8 ms**（median 35.6） | ~16× | **3 / 3** ✅ |
-| **complex-9** | 3.96 s | **36.9 ms**（median 40.4） | ~107× | **20 / 20** ✅ |
-| **complex-5** | 未完成（>200 s） | **92.3 ms**（median 96.6） | — | — / 20 |
-
-**行数一致**说明两个引擎的**结果正确**（complex-6 与 complex-9 逐行内容未逐条比对，
-但行数与首行一致）。**complex-5 是当前最大差距**：neo4j 96 ms 完成，eugraph 200 s 不返回。
-
-**complex-5 剩余问题**（未修）：`OPTIONAL MATCH (friend)<-[:HAS_CREATOR]-(post)
-<-[:CONTAINER_OF]-(forum) WHERE friend IN friends` 未完成 —— 需查 join order /
-`IN` 谓词下推，与内存无关。
+| 官方 driver jar | 本机无 Maven/mvnw/`~/.m2`，已下载 Maven 3.9.16 并用 `mvn -q clean package -DskipTests -Pcypher` 构建出 `cypher-1.2.0-SNAPSHOT.jar` |
+| Java 兼容性 | 上游要求 Java 11，本机 JDK 25 需加 `--add-exports java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED`（SBE 编解码器的 `DirectBuffer`），否则 `IllegalAccessError` |
+| **Bolt 兼容性** | **官方使用的 `neo4j-java-driver 4.4.3` 可直连 eugraph**（BASIC 认证，密码固定 `eugraph`；参数化查询、long 往返、列表参数均正常） |
+| 官方参数 | `datasets.ldbcouncil.org/snb-interactive-v1-parameters/substitution_parameters-sf0.1.tar.zst`，**与本库 sf0.1 数据同一 id 空间**（如 personId=30786325579101 在我们库里存在） |
+| 数据加载 | §2.2 的 `prepare_ldbc_official_csv.py`；关系类型必须显式给大写名（见该脚本 `REL_TYPE`） |
+| 审计 | 官方 `PASSED SCHEDULE AUDIT` 已通过（complex-5 关闭时，1 线程 / 250 操作：吞吐 1.89 op/s） |
+
+### 2.3.1 官方口径下的实测延迟（1 线程）
+
+> **下表已剔除作废数据**：最初一次运行（warmup 阶段）取自一个**索引不完整、随后崩溃**的实例，
+> 其中 short-4/5/6/7 高达 546–1955 ms 是**空索引导致的全表扫描**，不代表引擎水平（详见 2.3.2 第 0/1 条）。
+> 那批数字不在此保留。short 系列用 2.3.3 的修正值；复杂查询一栏仍需在"索引完好实例"上重测。
+
+颜色语义同 §2（🟢 相当或更快｜🟡 慢 1.5–5×｜🔴 慢 5× 以上）；neo4j 列为同机、同参数、
+同机交替实测（`scripts/bench_ldbc_ab.py`，15 轮取 min）。
+
+| 官方查询 | 对应 | eugraph ms | neo4j ms | vs neo4j |
+|---|---|---:|---:|:---:|
+| LdbcShortQuery4MessageContent | short-4 | **0.8–1.0** | 76.8–78.4 | 🟢 **快 77–98×** |
+| LdbcShortQuery5MessageCreator | short-5 | **0.9** | 162.2 | 🟢 **快 180×** |
+| LdbcShortQuery6MessageForum | short-6 | **1.5** | 78.3 | 🟢 **快 52×** |
+| LdbcShortQuery7MessageReplies | short-7 | **1.9** | 122.1 | 🟢 **快 64×** |
+| LdbcShortQuery2PersonPosts | short-2 | 4.5 | 2.3 | 🟢 慢 1.95× |
+| LdbcShortQuery3PersonFriends | short-3 | 1.5 | 1.6 | 🟢 快 1.1× |
+| LdbcShortQuery1PersonProfile | short-1 | 1.1 | 1.3 | 🟢 快 1.2× |
+| LdbcQuery3 | complex-3 | 527.8 | 24.7 | 🔴 慢 21.4× |
+| LdbcQuery12 | complex-12 | 459.3 | 91.8 | 🔴 慢 5.0× |
+| LdbcQuery10 | complex-10 | 67.2 | 7.6 | 🔴 慢 8.9× |
+| LdbcQuery2 | complex-2 | 22.1 | 3.8 | 🔴 慢 5.8× |
+| LdbcQuery4 | complex-4 | 13.5 | 3.2 | 🟡 慢 4.2× |
+| LdbcQuery11 | complex-11 | 10.0 | 3.1 | 🟡 慢 3.2× |
+| LdbcQuery7 | complex-7 | 6.9 | 2.6 | 🟡 慢 2.6× |
+| LdbcQuery8 | complex-8 | 6.5 | 2.7 | 🟡 慢 2.4× |
+| LdbcQuery6 | complex-6 | 550–605 | 61–87 | 🔴 慢 8.9×（官方表头实例上直接实测；§2 交错 A/B 未含该条） |
+| LdbcQuery5 | complex-5 | 不返回 | 92.3 | 🔴 **挂死**（>400 s，§2.3.2 第 3 条） |
+| LdbcQuery1 / 13 / 14 | complex-1 / 13 / 14 | — | — | ⚪ 语法不支持（`shortestPath` 系） |
+
+**复杂查询一栏的口径说明**：`LdbcQuery*` 行取 §2 同机交错 A/B 的 min（参数为本数据集真实
+存在的取值）；`LdbcShortQuery*` 行取 §2.3.3 的修正实测。两处都是"同机、同数据、同参数"，
+但**样本口径与官方 driver 的随机参数调度不同**，故不与上面那批已作废的 warmup 数字混用。
+
+### 2.3.2 官方口径暴露的问题
+
+> ⚠️ **本节最重要的一条是第 0 条**：先前的"short 查询比 neo4j 慢 5–14×"结论是**错的**，
+> 它测在一个索引失效（且随后崩溃）的实例上。修正后的结论见 2.3.3。
+
+0. **索引失效会让点查慢 80–290×，并伪装成"引擎退步"**
+   `CREATE INDEX` 在大标签上**先写 catalog 元数据、再回填**；回填过程中服务器会
+   崩溃（见第 1 条），于是 catalog 里留下**没有内容的索引**。此时本应是索引点查的语句
+   退化为全标签扫描：
+
+   | 语句 | 索引失效的实例 | 索引完好的实例 |
+   |---|---:|---:|
+   | `MATCH (m:Message {id: 3}) RETURN m.id` | 946 ms | **4 ms** |
+   | `MATCH (m:Post {id: 3}) RETURN m.id` | 461 ms | 索引点查 |
+   | `MATCH (c:Comment {id: 102205})` | 495 ms | 索引点查 |
+   | `MATCH (p:Person {id: 933})`（小表，回填成功） | 1 ms | 1 ms |
+
+   loader 对此**只 warn 不报错**（`Failed to create unique index ...: TTransportException:
+   Timed out`），于是"加载成功"的实例可能带着一堆空索引，后续所有读数都是废的。
+   **复现前必须核对**：`CALL db.indexes()` 列出索引 **且** 该标签的点查是毫秒级。
+1. **`CREATE INDEX` 回填阶段会 SIGSEGV 打死服务端**（新发现，P0）
+   在 135k–287k 行的大标签上建索引，服务端日志顺序为：
+
+   ```
+   [handler] Created vertex index 'idx_msg_cd' (id=12) on Message.(creationDate)   ← 报"成功"
+   *** Signal 11 (SIGSEGV) received by PID 56168 ... stack trace: ***
+   ```
+
+   即 **catalog 先提交、回填时崩溃**：索引定义留在库里、内容为空（第 0 条的直接成因），
+   服务端随后无响应。官方 schema 那批读数正是在这个崩溃后的实例上取的。
+   > 注：小标签（≤16k 行）回填可以在 loader 的 30 s RPC 超时内完成，所以只有大表暴露此问题。
+2. **loader 的索引创建用 30 s 超时，失败只 warn**
+   `src/program/shell/rpc_client.cpp:47` 的 `channel->setTimeout(30000)` 被 loader 共用；
+   大表回填超 30 s 即报 `TTransportException: Timed out`，而 `csv_loader.cpp:782` 只 log warn
+   后继续。**加载流程缺少"索引是否真的可用"的校验**。
+3. **complex-5 在官方参数下挂死**
+   单线程直接跑 `interactive-complex-5.cypher`（personId=15393162790207, minDate=1344643200000）
+   **超过 400 s 不返回**，服务端多个 compute 线程持续满载。官方 driver 跑到该查询时整个 run
+   停滞。§5.2 记录的 join order / `IN` 下推问题在官方参数下更容易命中，P0。
+4. **长连接被断开会把官方 driver 打挂**
+   跑到 `LdbcShortQuery2PersonPosts` 时客户端报
+   `ServiceUnavailableException: Connection to the database failed` 并终止整个 run；
+   同一时刻服务端日志有 `[bolt] read error: ... returned empty buffer` 与
+   `query cancelled mid-stream`。这是 [known-defects-todo](../query/known-defects-todo.md) §7
+   的已知缺陷——自写脚本靠"每轮新建连接"绕过，**官方 driver 不会绕**，修掉它是跑完整
+   官方 benchmark 的前置条件。
+
+### 2.3.3 修正：short 查询仍显著快于 neo4j
+
+在**索引完好**的实例（`sf0.1-fresh`，`CALL db.indexes()` 齐全且点查毫秒级）上重测，
+用与官方 driver 同类的随机 messageId，取 3 次最小值：
+
+| 查询 | messageId | eugraph | neo4j | 倍数 |
+|---|---:|---:|---:|---:|
+| short-4 | 3 | **0.8 ms** | 78.4 ms | 98× |
+| short-4 | 618475290625 | **1.0 ms** | 76.8 ms | 77× |
+| short-5 | 3 | **0.9 ms** | 162.2 ms | 180× |
+| short-6 | 618475290625 | **1.5 ms** | 78.3 ms | 52× |
+| short-7 | 618475290625 | **1.9 ms** | 122.1 ms | 64× |
+
+即 §2 的"short-4/5/6/7 快 34–93×"结论**成立**；2.3.1 表里那组"slow"数字以及据此得出的
+"引擎在 Message{id} 上退步"的判断**作废**，它们全部来自空索引实例。同时可见 eugraph
+的**延迟与 messageId 无关**（0.8–1.9 ms 恒定），而 neo4j 在同一批参数上波动到 77–162 ms。
 
-**complex-10 已支持**（此前记为「pattern comprehension 语法不支持」）：根因是
-`bindExistsSubPlan` 的保存槽用局部计数器命名，同语句的两个子计划都生成
-`__exists_saved_1` 而互相串绑定，导致与 `NOT <模式谓词>` 同处一个 WHERE 的模式推导
-静默丢弃终点约束。详见
-[列表推导内模式推导：发现与待修缺陷](../query/deferred-pattern-comprehension-findings.md)。
+> **教训**：索引状态是这类读数的一等前提。任何 LdbcShortQuery4/5/6/7 与
+> `MATCH (... {id: ...})` 的对比，都必须先证明目标标签的索引真的可用
+> （`CALL db.indexes()` + 一次毫秒级点查），否则测的是全表扫描。
 
-冒烟（personId=933, month=5）：complex-2/3/4 返回 0 行（该人当月无数据，非错误）、
-complex-7 **7 行** / complex-8 **20 行** / complex-10 **10 行** / complex-11/12 **0 行** 均正常；
-complex-1/13/14 因语法不支持报错。
+## 3. 未纳入对照的查询
 
-### 测量警告：CPU 会降到 33% 频率
+| 查询 | 原因 |
+|---|---|
+| complex-1 / complex-13 / complex-14 | **语法不支持**：依赖 `shortestPath` / `allShortestPaths` + `reduce`（eugraph 报 `UnexpectedSyntax`） |
+| complex-5 | **eugraph 不可用**：实测 3 个 compute 线程连续满载 9 分钟不返回，客户端 120 s 超时也不生效（阻断算子只在批边界检查取消）；neo4j 92 ms 完成 |
+| complex-6 / complex-9 | 早前轮次 eugraph 可执行（0.49 s / 3.96 s）；本轮为控制耗时未跑，neo4j 侧为 31 / 37 ms |
 
-本机（AMD Ryzen 7 5825U）在若干次测量中观察到 `lscpu` 的
-`CPU(s) scaling MHz: 33%`，此时**同一二进制**的 complex-7 相比全频时慢约 2 倍
-（如 pid 933 从 min 8.4ms 变为 15.8ms、pid 1242 从 39ms 变为 71ms）。
-**跨时间比较复杂度指标前必须确认当前 CPU 频率**，否则会把功耗状态误判为代码回归 ——
-本轮就曾因此怀疑新提交引入了性能回归，同二进制交错 A/B 显示两个二进制逐项相同，
-真正原因是频率。
+## 4. 测量陷阱（复现前务必先读）
 
-### complex-10 延迟（sf0.1）
+1. **CPU 频率会漂**：同一二进制跨会话可差约 2 倍。比较前先看 `grep MHz /proc/cpuinfo`，尽量同机交错。
+2. **长连接会被断开**：连续执行数十次后服务端会断开 bolt 连接（**服务器未崩**），
+   复用连接池会把它记成"查询失败/变慢"。基准脚本必须每个查询新建连接。
+3. **neo4j 侧缺 5 处数据差异**（§1.1）。**不补齐就测 neo4j，拿到的是假数字**——
+   它会给 0 行结果一个漂亮的毫秒级成绩。
+4. **id 类型不同**：eugraph 是 INTEGER、neo4j 是 STRING，id 类参数要按引擎转型，
+   否则查询静默返回 0 行。
 
-> **2026-09-19 更新**：本节原表测得于 `CPU(s) scaling MHz: 34%`；下表的**旧值**行保留作对照，
-> **新值**为「消除值深拷贝」改动落地后所测（`CPU(s) scaling MHz: 58%`，同机、同参数、
-> 同口径 warmup 3 / iters 15 / 每轮独立连接，threads 4）。
-> 频率不同（58% vs 34%）意味着**不能直接相减**：把旧值按 1.7× 归一化后仍显示约 2.4× 改善，
-> 与同二进制交错 A/B 的 2.25–2.74× 一致。改动详见
-> [查询值拷贝性能剖析](query-value-copy-profiling.md)。
+## 5. 能力缺口与遗留问题（仍然有效）
 
-**测量前提**：warmup 3 / iters 15，每轮独立连接，`--compute-threads 4`。
-
-| personId | month | rows | 旧 median（34% MHz） | **新 min** | **新 p25** | **新 median** | **新 p95** |
-|---|---:|---:|---:|---:|---:|---:|---:|
-| 933 | 5 | 10 | 396.59 ms | **96 ms** | **97 ms** | **99 ms** | **106 ms** |
-| 933 | 8 | 10 | 667.20 ms | **211 ms** | **212 ms** | **215 ms** | **228 ms** |
-| 1242 | 5 | 10 | 2476.58 ms | **906 ms** | **918 ms** | **925 ms** | **944 ms** |
-| 2199023256816 | 5 | 10 | 2902.08 ms | **1242 ms** | **1281 ms** | **1293 ms** | **1487 ms** |
-
-**新值下 `min` 与 `p95` 仅差约 10%**（旧值 p95/min 达 1.15–1.29），说明耗时更稳定 ——
-原因正是消除了「每帖复制整张属性表」这类与数据规模耦合的分配行为。
-
-**同条件下的 complex-7 参照**（用于上下文化，min）：
-
-| personId | complex-7 min | complex-10 min | 倍数 |
-|---|---:|---:|---:|
-| 933 | 17.03 ms | 375.74 ms | ~22x |
-| 1242 | 74.72 ms | 2328.10 ms | ~31x |
-| 2199023256816 | 134.52 ms | 2803.82 ms | ~21x |
-
-**~~瓶颈在计划开头，不在推导~~ —— 此结论已被测量否证（2026-09-19）**：
-
-原结论是从**计划形状**推断的（看见 `VarLenExpand` 在最外层就认定它是瓶颈），
-但逐算子计时与 perf/GDB 采样给出了相反的答案：
-
-| 环节 | 实测 |
-|---|---:|
-| 纯 2 跳 VLE（`VarLenExpand`） | **5.87 ms（0.1%）** |
-| 推导子计划的逐帖驱动 + 值拷贝 | **约 88%（简化探针上 3.4 s）** |
-
-**真正的瓶颈是「每帖一次的子计划执行」里反复发生的深拷贝**：
-`Unwind` 把 `posts` 这个 107 元素的列表**逐元素复制**（每组约 11449 次元素拷贝而非 107 次），
-每次拷贝都克隆 `unordered_map<LabelId, Properties>`。修复后该算子从占执行时间的
-**94.3% 降为 0%**（采样证据见 [查询值拷贝性能剖析](query-value-copy-profiling.md)）。
-
-**教训**：从计划形状推断瓶颈会得出错误结论 —— 必须逐算子计时，再用采样确认「时间花在什么操作上」。
-`VarLenExpand` 之所以「看起来」是瓶颈，是因为它在计划树上处于最外层，而非因为它耗时。
-
-原结论中仍然成立的部分：该 VLE **是无向 2 跳**（`direction=ANY`），需双向遍历，
-且候选集随人脉规模增长 —— 但它的**绝对耗时很小**，不是主要成本。
-
-**优化方向**（未实施）：从 `VarLenExpand` 的中间节点入手减少 2 跳候选集；
-或把 `NOT (friend)-[:KNOWS]-(person)` 的 `AntiSemiJoin` 前移到 VLE 之前剪枝。
-
-### complex-10 与 neo4j 对比（需先补齐 neo4j 数据，两个差异）
-
-neo4j 实例是从**旧的转换结果**导入的，直接对照会失真；补齐两处后两引擎可等价对比：
-
-| 差异 | neo4j 现状 | 补齐 |
-|---|---|---|
-| 派生细分标签 | `City`/`Country`/`Continent` 均为 0（eugraph 从 `Place.type` 派生） | `MATCH (p:Place) WHERE p.type='city' SET p:City`（country / continent 同理）→ 1343/111/6，与 eugraph 一致 |
-| `birthday` 类型 | **字符串**（原始 CSV 表头是 `birthday:LONG`，旧转换当字符串处理） | `MATCH (n:Person) SET n.birthday = toInteger(n.birthday)` |
-
-**结果一致性核验**（补齐后）：
-
-| personId | eugraph | neo4j | 结论 |
-|---|---:|---:|---|
-| 933 | 10 行 | 10 行 | **逐行一致** |
-| 1242 | 10 行 | 10 行 | 顶部 4 行不同 —— 经查是**平局截断**：`score = -1` 有 15 个 friend 而只取 10 个 |
-
-1242 的完整 `score` 分布**两引擎逐 bucket 相同**（75 个 bucket，含 `0:5, -1:5, -2:1, …, -2490:1`），
-且 2 跳过滤后的 friend 数两边都是 96 —— **结果正确，差异仅来自 ORDER BY 平局内的取舍顺序**。
-
-### complex-10 延迟对比（同数据、同机、同口径）
-
-> **2026-09-19 更新**：值深拷贝优化落地后重测。下表旧值为优化前（`CPU(s) scaling MHz: 34%`），
-> 新值为优化后（`58%`）；两列**都在同一次会话内**与 neo4j 同口径测得（warmup 3 / iters 15），
-> 因此**倍数**可直接比较。
-
-| personId | 时期 | eugraph min / median | neo4j min / median | 倍数（min） |
-|---|---|---:|---:|---:|
-| 933 | 优化前（34% MHz） | 410.36 / 426.23 ms | 21.24 / 22.71 ms | 19.3x |
-| 933 | **优化后（58% MHz）** | **96 / 99 ms** | **13.6 / 18.6 ms** | **7.1x** |
-| 1242 | 优化前（34% MHz） | 2363.17 / 2548.27 ms | 39.08 / 42.43 ms | 60.5x |
-| 1242 | **优化后（58% MHz）** | **906 / 925 ms** | **35.5 / 41.4 ms** | **25.5x** |
-
-**与 neo4j 的差距显著收窄**：933 从 19.3× 降到 **7.1×**，1242 从 60.5× 降到 **25.5×**
-（各约改善 2.4–2.7 倍，与「值拷贝」优化的 A/B 结果一致）。
-
-**剩余差距的性质**：本轮的优化针对的是**两引擎共有的深拷贝开销**（neo4j 也做属性读取，
-但它不在热路径上复制整张属性表）。剩余差距主要来自
-**无向 2 跳 VLE 的实现方式**（见下节）与推导的执行结构，而非值传输。
-
-（测量时 `CPU(s) scaling MHz` 偏低，两边同样受影响，**倍数**比绝对值更可靠。）
-
-**差距来源在计划开头，不在推导**：
-
-```
-VarLenExpand(src=person, dst=friend, hops=[2..2], labels=[11], direction=ANY)
-```
-
-即 `[:KNOWS*2..2]` 的**无向 2 跳变长展开**。neo4j 用双向 BFS + 关系索引，
-而当前实现的无向变长展开是主要成本；且它按 person 的连接度放大，
-所以高连接度的 1242 比 933 慢 6 倍（而 neo4j 只慢 1.8 倍）。
-
-**原优化方向**（针对 VLE；仍可做，但不是首要目标）：
-
-1. 无向 VLE 改为**双向按需扩展**（而非全量扫描后取交集）；
-2. 把 `NOT (friend)-[:KNOWS]-(person)` 的 `AntiSemiJoin` **前移到 VLE 之前**剪枝；
-3. 日期过滤（`friend.birthday`）在 VLE 阶段即可用属性下推削减候选。
-
-**已实施的优化方向**（收益 2.25–2.74×）：消除查询管线中的值深拷贝 ——
-`Unwind` 透传列改用 `Column::CONSTANT`、`ProjectionExtract` 的 `RowCache` 跨行复用、
-透传值走类型直拷、推导不再引发整点物化。详见
-[查询值拷贝性能剖析](query-value-copy-profiling.md)。
-
-### 回归验证：EXISTS 保存槽改名未影响性能
-
-同数据、同机、每轮重启、两二进制交错各两轮（complex-7，warmup 5 / iters 30）：
-
-| pid | 修复前 min（两轮） | 修复后 min（两轮） |
-|---|---|---|
-| 933 | 15.84 / 15.81 ms | 16.47 / 15.86 ms |
-| 1242 | 71.02 / 71.16 ms | 71.64 / 72.42 ms |
-| 2199023256816 | 138.96 / 138.08 ms | 154.72 / 147.35 ms |
-
-逐项差异都在噪声内，**无可测回归**。
-
-## 4. 当前版本关键优化（Q12 + Complex-3 / Short-7 + Complex-7 原版支持）
-
-1. **Q12 计划重写**：`Apply(collect(tag.id), HashJoin(friend))`，左支从 `Tag(id) IN tags` 反向展开，右支从 `Person(id)` 经 KNOWS 展开。
-2. **Expand 批处理**：dst label 一次批量检查；新增 `scanEdgesBatch` 快速路径。
-3. **VarLenExpand 邻接缓存**：同一 chunk 内复用每个 vertex 的邻接边和 label 判定，避免多起点重复扫描同一张图。
-4. **VarLenExpand OR 索引剪枝**：`WHERE src.prop = v OR dst.prop = v` 下推为 src/dst 索引允许集，Q12 左分支起点从 71 个 TagClass 降为 1 个。
-5. **Complex-3 索引优先 join**：将 `Expand(friend→message) → Filter(message.creationDate) → Expand(message→country)` 改写为 `HashJoin(candidate friends, IndexScan(Message.creationDate range) → HAS_CREATOR → creator)`；日期谓词在 Expand 之上先拆分为独立 Filter 后再下推。
-6. **Short-7 OPTIONAL MATCH 相关性链修复**：起点已绑定时不再因为终点也已绑定就退化为独立扫描 + CrossProduct，而是继续用 `CorrelatedSource → Expand(start→new) → Expand(new→bound_endpoint)`；同时修复了 complex-7 的 OPTIONAL MATCH 等价改写。
-7. **Complex-7 原版 pattern expression 支持**：`NOT`、`AND` / `OR`、`CASE WHEN`、`ANY` / 列表推导 WHERE、`EXISTS { pattern }` 等布尔上下文中的 bare pattern 解析为 `ExistsExpr`，经 `BoundPatternComprehensionApplyOp` hoist 后绑定为 `size(list) > 0`；原版 complex-7 已可执行，结果与 Neo4j 逐行一致。
-
-Q12 同机中位数：约 **13ms**（优化前约 1.2s）。
-
-Complex-3 同机中位数：约 **101ms**（优化前约 2024ms）。
-
-Short-7 有回复中位数：约 **7ms**（优化前超时 >240s；Neo4j 同机约 9ms）。
-
-## 5. 历史结论与遗留优化方案（保留）
-
-> 本节只保留仍然有效的根因分析和后续方案；已过时的“历史耗时记录”不再保留。
-
-### 5.1 已知语法能力缺口
+### 5.1 语法能力缺口
 
 | 语句 | 缺口 | 方案 |
 |------|------|------|
 | complex-1 | `shortestPath` 不支持 | 实现双向 BFS shortest-path 算子 |
-| complex-13 | `shortestPath` 不支持，当前用 `knows*1..3 + min(length(path))` 近似 | 同上 |
+| complex-13 | 同上（现用 `knows*1..3 + min(length(path))` 近似） | 同上 |
 | complex-14 | `allShortestPaths` + `reduce` 不支持 | 实现 all-shortest-paths + reduce |
 
-### 5.2 仍然较慢的语句与优化方向
+### 5.2 complex-5：CPU 不收敛（当前最大问题）
 
-| 语句 | 当前差距 | 已定位原因 | 后续方案 |
-|------|---------|-----------|---------|
-| complex-3 | ~2.1x | 已改为 Message(creationDate) 索引优先 HashJoin(creator=friend)；剩余在 `KNOWS*1..2` VLE、聚合与顶点物化 | 继续优化 VLE、聚合/排序批量化 |
-| complex-7 | 3.4x~12.5x | **不是** pattern expression 主导：主因是中间宽列物化 + 逐行 `Value` variant 拷贝/堆分配（该主因已由值拷贝优化改善） | 继续压缩中间宽列与聚合/排序批量化 |
-| complex-4 | ~2.0x | 已修多 pattern 关联；剩余在聚合/排序/ProjectionExtract | 聚合与排序批量化；ProjectionExtract 向量化 |
-| complex-11 | ~2.3x | 同上 | 同上 |
+`OPTIONAL MATCH (friend)<-[:HAS_CREATOR]-(post)<-[:CONTAINER_OF]-(forum) WHERE friend IN friends`
+不返回。早前记录的判断是"需查 join order / `IN` 谓词下推，与内存无关"；本轮在 Release 下实测
+**3 个 compute 线程连续 9 分钟满载**，且只有客户端断开后算子才停止。两条下一步：
+① 该形状的 join order 与 `IN` 下推；② 查清取消检查为何在阻断算子内部不生效。
 
-### 5.3 重查询状态复核（2026-09-19）
+### 5.3 仍然较慢的语句
 
-| 语句 | 现象（复核后） | 已定位方向 |
-|------|------|-----------|
-| complex-5 | 不再 OOM，但 200 s 内不返回 | `friend IN friends` 未下推 / join order |
-| complex-6 | ✅ 已可执行（0.49 s） | — |
-| complex-9 | ✅ 已可执行（3.96 s，峰值 3.1 GB，仍偏高） | 排序未做 top-K，`ORDER BY … LIMIT 20` 前物化全部朋友消息 |
+| 查询 | 差距 | 方向 |
+|---|---|---|
+| complex-3 | 21× | `Tag(name)` 起点选择、`HAS_CREATOR` 方向的前向/反向表选择 |
+| complex-12 | 4.6× | `TagClass(name) → Tag → Post` 多跳展开与中间结果规模 |
+| complex-10 | 8.8× | VLE 之后的 `IS_LOCATED_IN` / `HAS_CREATOR` 展开顺序 |
 
-### 5.4 已经修复并验证有效的问题（保留结论）
+## 6. 早前轮次已修复并验证的问题（结论保留）
 
-| 问题 | 修复 | 结果 |
-|------|------|------|
-| 单 MATCH 多 pattern / WITH 后 MATCH 退化为 AllNodeScan + CrossProduct | binder 复用已绑定列续接 Expand/VarLenExpand | complex-4、short-2 不再 AllNodeScan |
-| `:Message` 无主标签导致点查走 AllNodeScan | loader 多标签 + weak index + `Filter(LabelScan)->IndexScan` 触发 | short-4/5/6 降至 ~1ms |
-| Q12 `tag.id IN tags` 未下推、前向链 1.2s | Apply + HashJoin(friend) + Tag 反向链 + VLE 邻接缓存 + VLE OR 索引剪枝 | Q12 降至 ~13ms |
-| complex-3 先按 friend 展开 45,723 条 message，再做 creationDate 过滤 | WHERE 顶层 AND 拆分 + 谓词下推 + `IndexScan(Message.creationDate) → HAS_CREATOR → HashJoin(friend)` | 2024ms → ~101ms |
+1. **Q12 计划重写**：`Apply(collect(tag.id), HashJoin(friend))`，左支从 `Tag(id) IN tags` 反向展开。
+2. **Expand 批处理**：dst label 一次批量检查；新增 `scanEdgesBatch` 快速路径。
+3. **VarLenExpand 邻接缓存 + OR 索引剪枝**：同 chunk 内复用邻接与 label 判定；`src.prop = v OR dst.prop = v` 下推为索引允许集。
+4. **Complex-3 索引优先 join**：日期谓词先拆为独立 Filter 再下推，改走 `HashJoin(候选朋友, IndexScan(creationDate 区间))`。
+5. **Short-7 OPTIONAL MATCH 相关性链修复**：起点与终点都已绑定时仍走 `CorrelatedSource → Expand → Expand(bound_endpoint)`，不退化为独立扫描 + CrossProduct。
+6. **Complex-7 原版 pattern expression 支持**：`NOT` / `AND` / `OR` / `CASE WHEN` / `ANY` / 列表推导 / `EXISTS { pattern }` 等布尔上下文中的 bare pattern 解析为 `ExistsExpr`。
+7. **重型值类型句柄化**：`VertexValue` / `EdgeValue` / `ListValue` / `MapValue` / `PathValue` 以 `shared_ptr` 承载、`ColumnBuffer` 存句柄；分配占比 80% → 11%（剖析见 [query-value-copy-profiling](query-value-copy-profiling.md)）。
 
-### 5.5 Q12 优化路径记录（保留方法）
+## 7. 复现命令
 
-1. 计划重写：`Filter(CrossProduct)` → `Apply(collect(tag.id), HashJoin(friend))`；
-2. 右支：`IndexScanValues(Tag id IN tags) → 反向 Expand`，补 dst label 约束；
-3. 左支：TagClass 起点反向 VLE；同一 chunk 缓存 vertex 邻接边，edge scan 65,689 → 16,151；
-4. 左支：OR 下推为 VLE src/dst 索引允许集，71 个 TagClass 起点 → 1 个。
+### 7.1 用官方口径加载数据（推荐，见 §2.2）
 
-### 5.6 Complex-3 优化路径记录（本轮）
+```bash
+# headers.txt 为唯一事实来源：覆盖类型化表头 + 把标签列值改成标签名，然后加载
+python3 scripts/prepare_ldbc_official_csv.py \
+    --src /home/dodo/code/fuck/ldbc-conv --out /tmp/ldbc-official \
+    --load --host 127.0.0.1 --port 9090
+```
 
-1. **根因**：最后一条 MATCH 的 `WHERE message.creationDate >= start AND < end AND country IN [...]` 被绑定为一个 Filter，计划先把每个候选 friend 的全部 message 展开出来（该参数为 45,723 条），再过滤 creationDate。
-2. **AND 拆分**：binder 在 WHERE 直接作用于 Expand/VarLenExpand 时，把顶层 AND 拆成嵌套 Filter；这样 date 谓词可以下推到 `Expand(message→country)` 之前，而 `country IN [...]` 留在 Expand 之后。拆分前先递归检查 Expand，避免破坏 `Filter(LabelScan) → IndexScan` 的复合索引匹配。
-3. **索引优先 join**：物理计划将 `Filter(date) → Expand(friend→message, IN HAS_CREATOR)` 重写为 `HashJoin(left=candidate friends, right=IndexScan(Message.creationDate range) → Expand(message→creator, OUT HAS_CREATOR))`，把 45,723 次“逐 friend 展开消息”降为日期索引命中的 3,389 条消息。
-4. **索引 range 分页修复**：`AsyncGraphDataStore` 的索引 range 扫描原先每轮都会从起点重扫第一批（结果 >1024 条时重复）；改为先收集命中集、再按 1024 分块 yield，保证 3,389 条消息全部返回。
-5. **跨类型 join 等值**：HashJoin 现在把 `VertexValue` / `VertexRef`（以及 `EdgeValue` / `EdgeKey`）按同一个 id 视为相等，使左支构造出的 friend 顶点能与右支拓扑引用 creator 正确 join。
-6. **依赖**：`Message(creationDate)` 必须是完整索引。本机旧索引只有 1024 条，重建后为 286,744 条；未修复索引时该改写不会启用（也没有结果错误，只是退回原计划）。
+加载完成后**重启实例**（loader 建的索引只写入 catalog，运行中的实例内存里没有；
+未重启时 `MATCH (t:Tag {name:'Shakira'})` 需 51630 ms，重启后 45 ms）。
+
+### 7.2 官方 driver（§2.3）
+
+```bash
+# ① 构建官方 driver（首次；需联网拉依赖）
+MAVEN=/tmp/vbench/apache-maven-3.9.16/bin/mvn
+( cd /home/dodo/code/fuck/ldbc_snb_interactive_v1_impls && $MAVEN -q clean package -DskipTests -Pcypher )
+JAR=/home/dodo/code/fuck/ldbc_snb_interactive_v1_impls/cypher/target/cypher-1.2.0-SNAPSHOT.jar
+
+# ② 官方 substitution parameters（与 sf0.1 数据同一 id 空间）
+curl -sSL -o sf01-params.tar.zst \
+  https://datasets.ldbcouncil.org/snb-interactive-v1-parameters/substitution_parameters-sf0.1.tar.zst
+mkdir -p sf01-params && tar --zstd -xf sf01-params.tar.zst -C sf01-params
+
+# ③ benchmark.properties 关键项（其余沿用官方默认 driver/benchmark.properties）
+#    endpoint=bolt://localhost:7692     ← eugraph 实例
+#    user=neo4j  password=eugraph       ← eugraph 要求 BASIC 认证
+#    queryDir=queries/                  ← 指向 cypher/queries 的副本
+#    ldbc.snb.interactive.scale_factor=0.1
+#    ldbc.snb.interactive.parameters_dir=<上一步目录>
+#    ldbc.snb.interactive.LdbcQuery{1,13,14}_enable=false   ← shortestPath 语法不支持
+#    ldbc.snb.interactive.LdbcUpdate*_enable=false          ← 只跑读（等价官方 disable-updates.sh）
+#    ldbc.snb.interactive.LdbcQuery5_enable=false           ← 见 §2.3.2 第 1 条，否则 run 停滞
+
+# ④ 运行（JDK 25 需要模块导出；JDK 11 不需要）
+java --add-exports java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED \
+  -cp $JAR org.ldbcouncil.snb.driver.Client -P benchmark.properties
+```
+
+结果落在 `results/LDBC-SNB-results.json`（per-query 均值/min/max/分位）与
+`results/LDBC-SNB-validation.json`（官方 schedule audit）。
+
+**正常噪声**：driver 会打印 `Unable to load query from file: ...-duration-as-function.cypher`
+等——那是其余 workload 变体的文件缺失。
+
+### 7.3 自写同机交错 A/B（§2）
+
+```bash
+# eugraph 侧库名 default，neo4j 侧 neo4j；每查询新建连接
+python3 scripts/bench_ldbc_ab.py \
+    --queries-dir /home/dodo/code/fuck/ldbc_snb_interactive_v1_impls/cypher/queries \
+    --rounds 15 --warmup 3 --neo4j-fix-types \
+    --skip complex-1,complex-5,complex-6,complex-9,complex-13,complex-14
+
+# 只测 eugraph 单侧
+python3 scripts/bench_ldbc_interactive.py \
+    --queries-dir /home/dodo/code/fuck/ldbc_snb_interactive_v1_impls/cypher/queries \
+    --uri bolt://127.0.0.1:7688 --person-id 933 --override messageId=3 \
+    --warmup 1 --iters 3 --skip complex-1,complex-5,complex-6,complex-9,complex-13,complex-14
+```
+
+两个自写脚本的参数解析都支持 LDBC 查询文件的两种写法（`:param [{...}] => {...}` 与
+`:param name: value`）；`--override key=value` 用于把参数换成**本数据集里真实存在**的取值。
 
 ---
 
-## 6. 当前版本延迟（2026-09-21，重型值类型句柄化之后）
+## 8. 本轮发现的问题汇总（2026-09-25）
 
-> 本节测得于 **2026-09-21**，环境与 §2 **不同**（数据目录、参数口径、样本数都不同），
-> **不要与 §2 的数值直接相减**。§2 保留为 2026-09-10 的历史基线。
+> 分类记录本轮为跑通"官方口径对比"而暴露的问题。**A 类是引擎缺陷（待修），B 类是数据加载
+> 与工具链问题，C 类是并发/长时间运行暴露的问题，D 类是测量方法本身的陷阱**——D 类里有几条
+> 是**我本轮自己犯的错**，一并留下以免后来人重踩。
 
-### 6.1 环境与口径
+### A. 引擎缺陷（待修）
 
-| 项 | 配置 |
+| # | 问题 | 证据 | 影响 | 状态 |
+|---|---|---|---|---|
+| A1 | **`CREATE INDEX` 回填阶段 SIGSEGV，服务端崩溃** | 大标签建索引时日志为 `Created vertex index 'idx_msg_cd' (id=12) on Message.(creationDate)` 紧接 `*** Signal 11 (SIGSEGV) ... ***` | catalog 先提交、回填崩溃 → 留下**空索引**；服务端随后无响应 | 未修，见 [known-defects-todo §8](../query/known-defects-todo.md) |
+| A2 | **空索引不报错，点查静默退化为全标签扫描** | `Message{id}` 946 ms（索引完好 4 ms）、`Post{id}` 461 ms、`Comment{id}` 495 ms；小标签因回填能完成仍是 1 ms | 症状是"**只在大表上慢**"；所有 `MATCH (... {id: ...})` 类读数可能整体反向 | 未修（与 A1 同源，需 catalog/回填两阶段化） |
+| A3 | **loader 的 DDL 用 30 s 超时且失败只 warn** | `src/program/shell/rpc_client.cpp:47` `channel->setTimeout(30000)`；`csv_loader.cpp:782` 仅 `spdlog::warn` | "加载成功"的实例可能带着一堆空索引，加载流程结束也不校验索引可用性 | 未修 |
+| A4 | **complex-5 在官方参数下挂死** | personId=15393162790207 / minDate=1344643200000，单线程 **>400 s 不返回**，多个 compute 线程持续满载；官方 driver 跑到该查询整个 run 停滞 | 官方 benchmark 无法完整跑完 | 未修，见 §5.2 |
+| A5 | **规划器对多标签扫描拒绝用索引** | `physical_planner.cpp:2487`：`// Index scan only when single label (multi-label requires runtime intersection)` + `if (scan_op.label_ids.size() == 1)` | `Message`（`Post:Message`/`Comment:Message` 超类）上的属性点查永远不走索引 | 未修（设计取舍，需运行期标签交集校验后才能放开） |
+
+### B1. 数据加载与工具链问题（索引/加载/对照口径）
+
+| # | 问题 | 证据 | 结论 |
+|---|---|---|---|
+| B1 | **loader 建完索引后不重启实例，索引不生效** | 同一查询在"加载后未重启"为 **51630 ms**，重启后 **45 ms** | 索引只写入 catalog，运行中的实例内存里没有。**加载后必须重启** |
+| B2 | **关系类型必须显式指定，否则官方查询全部匹配不到** | `--relationships=person_knows_person=file` 会把类型存成 `person_knows_person`；`MATCH ()-[r:KNOWS]->()` 返回 **0**，而 loader 日志写着 `Loaded 14073 edges for 'person_knows_person'` | **边计数正确、类型名错误**，极其隐蔽；已在 `prepare_ldbc_official_csv.py` 的 `REL_TYPE` 表中显式给出大写关系名 |
+| B3 | **原始 CSV 表头缺类型化信息，会丢 schema** | 官方 pipeline 先用 `headers.txt` 覆盖表头再用 sed 改标签值；直接导原始 CSV 时 `Company`/`University`/`City`/`Country`/`Continent` 全部为 0（`type` 只是一列普通属性），complex-11 因此 0 行 | 已提供 `scripts/prepare_ldbc_official_csv.py`（见 §2.2），官方口径下无需任何手工补丁 |
+| B4 | **neo4j 侧旧转换的类型/标签差异会让对照失真** | `LIKES.creationDate` 为 `'1342815871582'`（complex-7 直接抛 `TypeError`）；`WORK_AT.workFrom` 为 `'2013'`（与 int 比较**静默不匹配 → 0 行**）；缺 `Message`/`Company`/`University` 派生标签 | 对照前必须先补齐（§1.1）；**"0 行"既可能是引擎错，也可能是对方数据缺**，不核验就会误判 |
+| B5 | **两引擎 id 类型不同，参数传错静默 0 行** | eugraph `id` 是 INTEGER（`933`），neo4j 是 STRING（`'933'`） | 跨引擎脚本必须按引擎转型；本项目对照脚本因此有 `id_type` 参数 |
+
+### B2. loader 专项：能力边界 vs 真缺陷
+
+为对齐"我们加载的数据"与"neo4j 加载的数据"，本轮做过的处理及其性质（避免把输入问题误记为 loader 缺陷）：
+
+| 我做过的处理 | 性质 |
 |---|---|
-| 数据目录 | `eugraph-sf0.1-fresh`（**330,126** 节点 / **1,478,002** 边）|
-| 参数 | LDBC 原版查询文件自带的 `:param` 默认值，**仅把 `personId` 覆盖为 933** |
-| server | `--compute-threads 4 --wt-cache-size-mb 1024 --wt-txn-sync none` |
-| 延迟口径 | 2 次热身 + **25 个样本**，报 p50 / p95 / min |
-| 查询文本 | `ldbc_snb_interactive_v1_impls/cypher/queries/` **原版，未改写** |
+| 给 **neo4j** 手工 `SET o:Company` 打派生标签 | 纯 neo4j 侧补丁，与 loader 无关 |
+| 用 `prepare_ldbc_official_csv.py` 把表头换成 `headers.txt` 的类型化表头、把 `type` 列值改成 `Company`/`City`… | **输入预处理**——原始 CSV 缺这些信息（官方 pipeline 也做同样的事），见 §1.0 |
+| 给 loader 传显式关系类型 `--relationships=KNOWS=file` | **输入映射**——官方 `neo4j-admin import` 同样要求 `--relationships=TYPE=` |
 
-两点口径说明：
+**结论：官方口径下 loader 不缺关键能力**，已核实它支持：
 
-* **每个样本新建连接**。服务端在连续执行 30+ 次后会断开长连接
-  （[known-defects-todo](../query/known-defects-todo.md) §7），复用连接会把
-  「连接断开」误读成「查询变慢」——本节测量中确实遇到过一次。
-* 参数来自查询文件，因此行数与 §2 **不一致**（例如 complex-4 本节 0 行、§2 为 10 行；
-  complex-12 本节 3 行、§2 为 2 行），这是**参数不同**，不是结果差异。
+| 能力 | 证据 |
+|---|---|
+| `:LABEL` 列（一列值 → 多标签） | `csv_loader.cpp:79` `HeaderKind::LABEL`；实测 `Company` 1575 / `University` 6380 / `City` 1343 |
+| 类型化表头 | `parseTypedColumn` → `parseTypeName`；实测官方表头加载后 `r.workFrom = 2013`（整数） |
+| 多标签节点 | `--nodes=Comment:Message=file`（实测 `Message` 286,744 = Post 135,701 + Comment 151,043） |
+| 显式关系类型 | `--relationships=TYPE=file`（声明 `loader_main.cpp:38`，解析为类型 `csv_loader.cpp:178`） |
 
-### 6.2 当前延迟
+**真正的 loader 缺陷**（都是"静默通过"型）：
 
-| 查询 | 行数 | p50 (ms) | p95 (ms) | min (ms) |
-|------|-----:|---------:|---------:|---------:|
-| complex-2 | 20 | 30.2 | 34.8 | 26.9 |
-| complex-3 | 0 | 610.3 | 641.5 | 580.9 |
-| complex-4 | 0 | 16.1 | 18.8 | 14.7 |
-| complex-6 | 3 | 279.2 | 322.3 | 262.6 |
-| complex-7 | 0 | 8.5 | 9.3 | 7.9 |
-| complex-8 | 0 | 4.4 | 4.9 | 4.1 |
-| **complex-9** | 20 | **642.4** | 664.0 | 621.7 |
-| **complex-10** | 10 | **76.5** | 80.9 | 71.9 |
-| complex-11 | 4 | 12.4 | 14.2 | 10.5 |
-| complex-12 | 3 | 554.6 | 575.9 | 527.0 |
+| # | 缺陷 | 证据 | 危害 |
+|---|---|---|---|
+| L1 | **索引创建失败只 warn、加载结束不校验索引可用性** | `csv_loader.cpp:782` 仅 `spdlog::warn`；与 `rpc_client.cpp:47` 的 30 s 超时共用 | 实例"加载成功"但索引为空 → 点查退化全扫描（946 ms vs 4 ms）。本轮所有错误结论的源头，与 §8 A1/A2 同源 |
+| L2 | **关系类型与查询不一致时不告警** | 传 `--relationships=person_knows_person=file` → 类型名即 `person_knows_person`，日志写 `Loaded 14073 edges for 'person_knows_person' (0 skipped)` | 边**计数正确、类型名错误**，`MATCH ()-[r:KNOWS]->()` 返回 0，只有肉眼比对日志才能发现 |
+| L3 | **扫描模式的类型名由文件名约定推导，与官方命名不符** | `person_knows_person` → 取首尾下划线之间的 `knows`（不是 `KNOWS`） | 扫描模式吃官方 CSV 时类型名全部不符，必须显式映射 |
+| L4 | 不支持从 `type` 列自动派生标签 | 原版 `organisation_0_0.csv` 的 `type=company` 只存成属性 | **设计取舍**（官方也靠 `:LABEL` 列），但意味着 loader 无法直接吃官方原版 CSV，必须先做 §1.0 的表头覆盖 |
 
-`complex-1 / 13 / 14` 仍因 `shortestPath` 未实现而**无法执行**；
-`complex-5` 仍**不返回**（架构缺口，见 §5.3 与
-[known-defects-todo](../query/known-defects-todo.md) §8）。
+> 附：**端点 id 缺失不是静默的**——`csv_loader.cpp:869` 有 `skipped++` 计数并打印
+> （本轮所有加载都是 `0 skipped`），这条不算缺陷。
 
-### 6.3 与 main 的对比（交错 A/B）
+**建议的 loader 改进（按优先级）**：
+1. **加载结束自检**：对每个标签做一次"已知存在的 id 点查"，非毫秒级即**报错退出**（并核对 `db.indexes()`），彻底堵住 L1；
+2. **DDL 超时独立可配**（`--ddl-timeout`，或建索引单独用长超时）；
+3. **关系类型核对**：加载后比对"实际类型 vs `--relationships`/文件名推导"，不一致就 warn；
+4. 可选：`--label-from-column=type` 支持从列值派生标签，从而能直接吃官方原版 CSV。
 
-**口径**：每轮**交换两个构建的先后顺序**（固定顺序会让后跑者快约 7%，
-见 [known-defects-todo](../query/known-defects-todo.md) §11），共 2 轮，各取最小值。
+### C. 并发与长时间运行暴露的问题
 
-| 查询 | main (ms) | 现在 (ms) | 比值 | 行数 |
-|------|----------:|----------:|-----:|------|
-| **complex-9** | 1439.8 | **575.8** | **0.40** | 20 / 20 |
-| **complex-10** | 98.1 | **63.0** | **0.64** | 10 / 10 |
-| complex-3 | 663.4 | **550.8** | 0.83 | 0 / 0 |
-| complex-6 | 282.8 | **250.2** | 0.88 | 3 / 3 |
-| complex-2 | 24.9 | 24.0 | 0.97 | 20 / 20 |
-| complex-8 | 3.0 | 3.0 | 0.99 | 0 / 0 |
-| complex-12 | 466.9 | 477.5 | 1.02 | 3 / 3 |
+| # | 问题 | 证据 | 结论 |
+|---|---|---|---|
+| C1 | **长连接会被服务端断开，并会打挂官方 driver** | 跑到 `LdbcShortQuery2PersonPosts` 时客户端 `ServiceUnavailableException: Connection to the database failed` 并终止整个 run；同一时刻服务端有 `[bolt] read error: ... returned empty buffer` 与 `query cancelled mid-stream` | 即 [known-defects-todo §7](../query/known-defects-todo.md)；自写脚本靠"每查询新建连接"绕过，**官方 driver 不会绕**，是跑完整官方 benchmark 的前置条件 |
+| C2 | **并发下点查延迟显著抬高** | 4 并发 short-7：单线程 550 ms → 并发每个 3.2 s（≈6×） | 官方 driver 默认多线程，读到的延迟会高于单线程直测；对比两引擎时必须同线程数 |
+| C3 | **客户端断开后，服务端算子会继续算** | complex-5 在客户端 120 s 超时断开后仍持续满载；另一例 `query cancelled mid-stream; rolling back after 0 record(s)` 才停 | 取消只在批边界生效，阻断算子内部不检查；跑基准时要留够超时，否则残留计算会污染后续读数 |
 
-**结论**：大查询有实际提升（complex-9 **2.5×**、complex-10 **1.6×**、
-complex-3 1.2×、complex-6 1.13×），小查询**持平**。
-§6.2 表中 complex-2/7/8/12 看似略慢（1.1–1.2×），那是**顺序测量**的偏差 ——
-以本节的交错 A/B 为准。
+### D. 测量陷阱（含本轮我自己的失误）
 
-### 6.4 提升来源：消除深拷贝
-
-用 `perf` 对**计算线程**（`CPUThreadPool1..3`）平采样，同口径对比：
-
-| 指标 | 改造前 | 现在 |
-|------|-------:|-----:|
-| **分配/释放/析构占采样** | **≈80%** | **≈11%** |
-| `VertexValue::VertexValue(const&)` | 8.4% | 已不在前列 |
-
-改造前每行都深拷贝 `Value` 的载荷（`VertexValue` 持 `unordered_map<LabelId, Properties>`
-与 `std::set`），现在只拷一个引用计数。设计与不变量见
-[query-engine-design](../query/engine/query-engine-design.md) 第六节，
-完整剖析见[查询值拷贝性能剖析](query-value-copy-profiling.md)。
-
-### 6.5 与 neo4j 的距离（personId=933）
-
-neo4j 侧已打补丁使数据可比（`Post`/`Comment` 补 `:Message` 标签、
-`Message.creationDate` 与 `HAS_MEMBER.joinDate` 转为整数）：
-
-| 查询 | neo4j (ms) | 现在 (ms) | 差距 |
-|------|-----------:|----------:|-----:|
-| complex-6 | 30.8 / 35.6 | 279.2 | ~8× |
-| complex-9 | 36.9 / 40.4 | 642.4 | ~17× |
-
-**差距已不在拷贝**：当前 complex-9 的采样集中在 WiredTiger 的行扫描
-（`__wt_row_search` / `__wt_btcur_next`）与 `__tree_walk_internal`，
-即**存储访问与中间结构遍历**，而非值物化。
-
----
-
-## 附：已移除的过程叙述
-
-本文件此前还包含 §6「执行计划对比与扩展性分析」、§7「SHORT-7 / COMPLEX-7 的
-OPTIONAL MATCH 相关性优化」、§8「COMPLEX-7 基线与优化」共约 750 行。
-它们是 complex-7 / q12 的**逐轮过程记录**，其**结论已保留在 §4 与 §5**
-（关键优化项、已修复问题、优化路径记录、遗留方向），过程细节属于历史叙述，
-不再占据本文档篇幅。需要查阅原始过程可回溯 git 历史。
+| # | 陷阱 | 本轮实例 | 教训 |
+|---|---|---|---|
+| D1 | **在索引失效的实例上测"引擎快慢"** | 我据此得出"short-4/5/6/7 比 neo4j 慢 5–14×"，并在文档里写下"引擎在 `Message{id}` 上退步"——**结论完全错误**；修正后是**快 52–180×**（§2.3.3） | 任何 id 点查类读数前，**先证明索引可用**（`CALL db.indexes()` + 一次毫秒级点查） |
+| D2 | **忘了"加载后重启实例"** | 未重启时 `Tag{name}` 点查 51630 ms，重启后 45 ms（1148×） | 见 B1；把"没重启"误判成引擎慢 1000 倍 |
+| D3 | **官方参数 vs 自选参数混用导致读数不可比** | §2（自选 messageId）与 §2.3（官方 16 组随机参数）数字差 40× 以上；我还据此怀疑过引擎 | 两套口径都有效，但**不可互相加减**；对外引用必须注明参数来源 |
+| D4 | **`--skip`/匹配用了过宽的字符串** | 用 `complex-1.` 只跳到 `complex-1` 之外还漏跳过；`pgrep -f bench_xxx` 匹配到**自己的命令行**，导致自杀式 kill（本轮发生 3 次，误杀了 7688/9091 实例） | 匹配要用词边界；杀进程用 `ps -eo pid,comm` 过滤 comm 而不是 `pgrep -f` |
+| D5 | **端口/实例对应关系搞错** | 曾把官方 driver 指向"原始 CSV 加载、无官方 schema"的实例，读数 0.02 op/s，差点误判为引擎极慢 | 多实例并行时，把"端口 ↔ 数据目录 ↔ schema 状态"记在纸面上再测 |
+| D6 | **CPU 频率漂移与跨会话比较** | 本机同一二进制跨会话可差约 2× | 性能结论必须同机交错 A/B；绝对值只在注明条件下引用 |
+| D7 | **跨引擎"0 行/行数不符"未必是缺陷** | 多次遇到 eugraph 0 行 vs neo4j N 行，最终查明分别是：neo4j 缺派生标签（B4）、neo4j 字段为字符串（B4）、我的脚本关系类型写错（B2）、文件默认参数指向不存在的 id | 先核**双方输入是否等价**，再判引擎对错 |
